# test-rust-size

./: Cargo.toml  README.md  build.sh
nostd-println/: Cargo.toml
nostd-println-async/: Cargo.toml
nostd-println-async/src/: main.rs
nostd-println/src/: main.rs
nostd-tcp/: Cargo.toml
nostd-tcp/src/: main.rs  nostd.rs
std-boringtun/: Cargo.toml
std-boringtun/src/: main.rs
std-netlink/: Cargo.toml
std-netlink/src/: main.rs
std-println/: Cargo.toml
std-println-async/: Cargo.toml
std-println-async/src/: main.rs
std-smol/: Cargo.toml
std-tcp/: Cargo.toml
std-tcp/src/: main.rs
