[package]
name = "nostd-println-async"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = { version = "0.2", default-features = false }
libc-print = "0.1.17"
libc_alloc = "1.0.3"
executor = "0.8"
