[package]
name = "nostd-tcp"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = { version = "0.2", default-features = false }
libc-print = "0.1.17"
libc_alloc = "1.0.3"
woke = "0.0.2"
cstr_core = "0.2.5"
spin = "0.5.2"
lazy_static = "1.4.0"
