[package]
name = "std-netlink"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smol = "1.2.5"
genetlink = { version = "0.2.1", default-features = false, features = ["smol_socket"] }
netlink-sys = "0.8.2"
netlink-proto = { version = "0.9.2", default-features = false, features = ["smol_socket"] }
netlink-packet-generic = { version = "0.3.0" }
netlink-packet-core = { version = "0.4.2" }
netlink-packet-wireguard = { version = "0.2.1" }
base64 = "0.13.0"
